# ML_Coursework

./: .pre-commit-config.yaml  pyproject.toml
Course 1, Supervised Machine Learnin, Regression and Classification/Week_2_Linear_Regression/: C1_W2_Lab01.py
Course 1, Supervised Machine Learnin, Regression and Classification/Week_3_Classification/: C1_W3_Lab01.py
Course 2, Advanced Learning Algorithms/Week_1_Neurons_and_Layers/: C2_W1_Lab01_Neurons_and_Layers.py  neurons.py
Course 2, Advanced Learning Algorithms/Week_2_Neural_Network_Training/: C2_W2_Softmax_and_Categorical_NN.py
Course 2, Advanced Learning Algorithms/Week_3_Advice_for_Applying_Machine_Learning/: C2_W3_Evaluating_Models.py
Course 2, Advanced Learning Algorithms/Week_4_Decisions_Trees/: C2_W4_Decision_Tree_with_Markdown.py
Course 3, Unsupervised Learning, Recommenders, Reinforcement Learning/Week_1_Unsupervised_Learning/: C3_W1_Anomaly_Detection  C3_W1_Anomaly_Detection.py  C3_W1_KMeans_Assignment.py
Course 3, Unsupervised Learning, Recommenders, Reinforcement Learning/Week_2_Collaborative_Filtering_Recommender_Systems/: C3_W2_Collaborative_RecSys_Assignment.py
Course 3, Unsupervised Learning, Recommenders, Reinforcement Learning/Week_3_Reinforcment_Learning/: C3_W3_A1_Assignment.py
Course 4, Neural Networks and Deep Learning/Week_2_Logistic_Regression_with_a_Neural_Network/: Logistic_Regression_with_a_Neural_Network_mindset.py
Course 4, Neural Networks and Deep Learning/Week_3_Planar_Data_Classification_with_One_Hidden_Layer/: Planar_data_classification_with_one_hidden_layer.py
Course 4, Neural Networks and Deep Learning/Week_4_Deep_Neural_Networks/: Deep_Neural_Network_Application.py  (+1 more)
(+39 files in other folders)
