[tool.poetry]
name = "andrew-ng-machine-learning"
version = "0.1.0"
description = ""
authors = ["HarryMWinters <harrymcwinters@gmail.com>"]
readme = "README.md"
packages = [{include = "andrew_ng_machine_learning"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
jupyterhub = "^3.1.1"
jupyter-server = "^2.2.1"
jupyterlab = "^3.6.1"
notebook = "^6.5.2"
matplotlib = "^3.7.0"
numpy = "^1.24.2"
tensorflow = "^2.11.0"
sympy = "^1.11.1"
scikit-learn = "^1.2.1"
nptyping = "^2.5.0"
dlai-tools = "^0.5.7"
music21 = "^9.1.0"
emoji = "^2.8.0"
tqdm = "^4.66.1"
faker = "^19.6.0"
pydub = "^0.25.1"
transformers = "^4.33.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = "True"
known_first_party = []
known_third_party = ["numpy", "tensorflow", "matplotlib", "sympy", "sklearn"]